@@ -27,7 +27,6 @@ export(loggedError)
 export(loggedOutput)
 export(status)
 export(value)
-importFrom(R.utils,tempvar)
 importFrom(batchtools,batchExport)
 importFrom(batchtools,batchMap)
 importFrom(batchtools,clearRegistry)
